@@ -1,7 +1,9 @@
+// BookingController.java
 package com.movieapp.swe_project_backend.controller;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -12,12 +14,14 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.http.HttpStatus;
-import java.util.Collections;
-import java.util.Map;
 
+import com.movieapp.swe_project_backend.dto.BookingDTO;
+import com.movieapp.swe_project_backend.model.Auditorium;
 import com.movieapp.swe_project_backend.model.Booking;
+import com.movieapp.swe_project_backend.model.MovieInfo;
+import com.movieapp.swe_project_backend.service.AuditoriumService;
 import com.movieapp.swe_project_backend.service.BookingService;
+import com.movieapp.swe_project_backend.service.MovieInfoService;
 
 @RestController
 @RequestMapping("/booking")
@@ -26,18 +30,48 @@ public class BookingController {
     @Autowired
     private BookingService bookingService;
 
+    @Autowired
+    private MovieInfoService movieInfoService;
+
+    @Autowired
+    private AuditoriumService auditoriumService;
+
     @PostMapping("/add")
-public ResponseEntity<Map<String, Integer>> addBooking(@RequestBody Booking booking) {
-    Booking saved = bookingService.saveBooking(booking);
-    int bookingID = saved.getBookingID();
-    Map<String, Integer> response = Collections.singletonMap("bookingID", bookingID);
-    // Return the response with the booking ID
-    return ResponseEntity.ok(response);
-}
+    public ResponseEntity<?> addBooking(@RequestBody Booking booking) {
+        Booking saved = bookingService.saveBooking(booking);
+        return ResponseEntity.ok().body(java.util.Map.of("bookingID", saved.getBookingID()));
+    }
 
     @GetMapping("/user/{userID}")
     public List<Booking> getBookingByUserId(@PathVariable int userID) {
         return bookingService.getBookingByUserId(userID);
+    }
+
+    @GetMapping("/user-history/{userID}")
+    public ResponseEntity<List<BookingDTO>> getBookingHistoryByUserId(@PathVariable int userID) {
+        List<Booking> bookings = bookingService.getBookingByUserId(userID);
+
+        List<BookingDTO> dtos = bookings.stream().map(b -> {
+            String movieTitle = movieInfoService.getMovieInfoById(b.getMovieShow().getMovieID())
+                .map(MovieInfo::getTitle).orElse("Unknown Movie");
+
+            String auditoriumName = auditoriumService.getAuditoriumById(b.getMovieShow().getAuditoriumID())
+                .map(Auditorium::getAuditoriumName).orElse("Auditorium");
+
+            String promoCode = b.getPromoCode() != null ? b.getPromoCode().getCode() : null;
+
+            BookingDTO dto = new BookingDTO();
+            dto.setBookingID(b.getBookingID());
+            dto.setMovieTitle(movieTitle + " - " + auditoriumName);
+            dto.setShowStartTime(b.getMovieShow().getShowStartTime());
+            dto.setNoOfTickets(b.getNoOfTickets());
+            dto.setTotalPrice(b.getTotalPrice());
+            dto.setPromoCode(promoCode);
+
+            return dto;
+        }).collect(Collectors.toList());
+
+        return ResponseEntity.ok(dtos);
     }
 
     @GetMapping("/get/{id}")
